--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -5,7 +5,7 @@ jupytext:
     extension: .md
     format_name: myst
     format_version: 0.13
-    jupytext_version: 1.10.3
+    jupytext_version: 1.11.4
 kernelspec:
   display_name: Python 3 (ipykernel)
   language: python
@@ -15,10 +15,9 @@ kernelspec:
 > __Content modified under Creative Commons Attribution license CC-BY
 > 4.0, code under BSD 3-Clause License © 2020 R.C. Cooper__
 
-+++
-
 ```{code-cell} ipython3
 :tags: [hide-input]
+
 import numpy as np
 import matplotlib.pyplot as plt
 plt.style.use('fivethirtyeight')
@@ -37,7 +36,13 @@ plt.style.use('fivethirtyeight')
     c. What is the result of the following logical operation, `volume>1000` (in inches^3)
 
 ```{code-cell} ipython3
+mass = 31
+volume = 12.5 * 11 * 14
+avg_density = mass/volume
 
+print('Volume =',volume,'in^3')
+print('Average density =',avg_density,'lbs/in^3')
+volume>1000
 ```
 
 2. Use the variables given below, `str1` and `str2`, and check the following 
@@ -51,10 +56,15 @@ plt.style.use('fivethirtyeight')
     d. How could you force (b) to be true? [Hint](https://docs.python.org/3/library/stdtypes.html?highlight=str.lower#str.lower) or [Hint](https://docs.python.org/3/library/stdtypes.html?highlight=str.lower#str.upper)
 
 ```{code-cell} ipython3
-str1 = 'Python'
+str1 = str.lower('Python')
 str2 = 'python'
+
+#str1<str2
+str1==str2
+#str1>str2
 ```
 
+````{code-cell} ipython3
 3. The following code has an error, fix the error so that the correct result is returned:
 
 ```y is 20 and x is less than y```
@@ -68,9 +78,16 @@ if x<y and y==20:
 else:
     print('x is not less than y')
 ```
+````
 
 ```{code-cell} ipython3
+x=1
+y=20
 
+if x<y and y==20:
+    print('y is 20 and x is less than y')
+else:
+    print('x is not less than y')
 ```
 
 4. There is a commonly-used programming question that asks interviewees
@@ -110,9 +127,27 @@ else:
 18 | Computational Mechanics
 19 | 19
 
-
 ```{code-cell} ipython3
+def computational_mechanics_rocks(n):
+    for i in range(n):
+        if i % 3 == 0 and i % 2 == 0 and i % 5 == 0:
+            print(f"{i}: Computational Mechanics Rocks!")
+        elif i % 3 == 0 and i % 2 == 0:
+            print(f"{i}: Computational Mechanics")
+        elif i % 3 == 0 and i % 5 == 0:
+            print(f"{i}: Computational Rocks!")
+        elif i % 2 == 0 and i % 5 == 0:
+            print(f"{i}: Mechanics Rocks!")
+        elif i % 3 == 0:
+            print(f"{i}: Computational")
+        elif i % 2 == 0:
+            print(f"{i}: Mechanics")
+        elif i % 5 == 0:
+            print(f"{i}: Rocks!")
+        else:
+            print(f"{i}: {i}")
 
+computational_mechanics_rocks(20)
 ```
 
 ## Problems [Part 2](./02_Working_with_Python.md)
@@ -124,7 +159,39 @@ else:
     b. Use your function to plot sin(x) and cos(x) for x=$0..2\pi$
 
 ```{code-cell} ipython3
+def sincos(x):
+    '''
+    Calculate sine and cosine of the input array x
+    
+    Parameters
+    ---------
+    x: array of input values
+    
+    Returns
+    ---------
+    tuple: Two arrays, first array containing the sin of the input values,
+           second array containing the cosine of the input values.
+    '''
+    sinx = np.sin(x)
+    cosx = np.cos(x)
+    return sinx, cosx
 
+
+x = np.linspace(0, 2 * np.pi, 100)
+
+
+sinx, cosx = sincos(x)
+
+
+plt.figure(figsize=(10, 5))
+plt.plot(x, sinx, label='sin(x)')
+plt.plot(x, cosx, label='cos(x)')
+plt.title('Sine and Cosine Functions')
+plt.xlabel('x')
+plt.ylabel('Value')
+plt.legend()
+plt.grid(True)
+plt.show()
 ```
 
 2. Use a for-loop to create a variable called `A_99`, where every element is the product
@@ -133,10 +200,36 @@ of the two indices from 0 to 9 e.g. A_99[3,2]=6 and A_99[4,4]=16.
     
 a. Calculate the mean and standard deviation of `A_99`
 
-b. time your script that creates `A_99` takes its mean and standard deviation using `%%timeit`    
+b. time your script that creates `A_99` takes its mean and standard deviation using `%%timeit`
 
 ```{code-cell} ipython3
+A_99 = np.zeros((10, 10))
 
+for i in range(10):
+    for j in range(10):
+        A_99[i, j] = i * j
+
+mean_A_99 = np.mean(A_99)
+std_A_99 = np.std(A_99)
+
+print(f"Mean of A_99: {mean_A_99}")
+print(f"Standard Deviation of A_99: {std_A_99}")
+
+```
+
+```{code-cell} ipython3
+%%timeit
+A_99 = np.zeros((10, 10))
+for i in range(10):
+    for j in range(10):
+        A_99[i, j] = i * j
+mean_A_99 = np.mean(A_99)
+std_A_99 = np.std(A_99)
+'''
+    For some reason I could not get %%timeit to work using just one cell. I kept getting a "Ussage Error".
+    I didnt see this error referenced in the readings so I consulted the internet and ChatGPT suggested putting 
+    it in a second cell, which seems to work.
+'''
 ```
 
 3. Use the two arrays, X and Y, given below to create A_99 using numpy array math rather than a for-loop.
@@ -152,10 +245,26 @@ c. time your script that creates `A_99` takes its mean and standard deviation us
 d. create a filled contour plot of X, Y, A_99 [contourf plot documentation](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.contourf.html)
 
 ```{code-cell} ipython3
+%%timeit
+X, Y = np.meshgrid(np.arange(10), np.arange(10))
+A_99 = X * Y
+mean_A_99 = np.mean(A_99)
+std_A_99 = np.std(A_99)
 
+print(f"Mean of A_99: {mean_A_99}")
+print(f"Standard Deviation of A_99: {std_A_99}")
+
+plt.figure(figsize=(8, 6))
+contour = plt.contourf(X, Y, A_99, cmap='viridis')
+plt.colorbar(contour)
+plt.title('Filled Contour Plot of A_99')
+plt.xlabel('X')
+plt.ylabel('Y')
+plt.show()
 ```
 
-4. The following linear interpolation function has an error. It is supposed to return y(x) given the the two points $p_1=[x_1,~y_1]$ and $p_2=[x_2,~y_2]$. Currently, it just returns and error.
+````{code-cell} ipython3
+# 4. The following linear interpolation function has an error. It is supposed to return y(x) given the the two points $p_1=[x_1,~y_1]$ and $p_2=[x_2,~y_2]$. Currently, it just returns and error.
 
 ```python
 def linInterp(x,p1,p2):
@@ -168,9 +277,18 @@ def linInterp(x,p1,p2):
     
     return p1[2]+slope*(x - p1[1])
 ```
+````
 
 ```{code-cell} ipython3
-
+def linInterp(x,p1,p2):
+    '''linear interplation function
+    return y(x) given the two endpoints 
+    p1=np.array([x1,y1])
+    and
+    p2=np.array([x2,y2])'''
+    slope = (p2[1]-p1[1])/(p2[0]-p1[0])
+    
+    return p1[1]+slope*(x - p1[0])
 ```
 
 ## Problems [Part 3](./03_Numerical_error.md)
@@ -212,7 +330,56 @@ print('average growth of 1900 - 2020')
 print(np.mean((pop[1:] - pop[0:-1])/(year[1:] - year[0:-1])))
 ```
 
+```{code-cell} ipython3
+year, pop = np.loadtxt('../data/world_population_1900-2020.csv',skiprows=1,delimiter=',',unpack=True)
+
+def analytical_population(t, P0, k):
+    return P0 * np.exp(k * t)
+
+P0 = pop[0]  # Initial population in 1900
+k_g = 0.013  # Growth rate
+years = np.arange(1900, 2021, 20)
+analytical_pop = analytical_population(years - 1900, P0, k_g)
+
+def euler_population(years, P0, k):
+    P = np.zeros_like(years)
+    P[0] = P0
+    for i in range(1, len(years)):
+        dt = years[i] - years[i-1]
+        P[i] = P[i-1] + k * P[i-1] * dt
+    return P
+
+euler_pop = euler_population(years, P0, k_g)
+
+print('years=',year)
+print('population =', pop)
+
+print('average population changes 1900-1950, 1950-2000, 2000-2020')
+print((pop[1:] - pop[0:-1])/(year[1:] - year[0:-1]))
+print('average growth of 1900 - 2020')
+print(np.mean((pop[1:] - pop[0:-1])/(year[1:] - year[0:-1])))
+
+plt.figure(figsize=(10, 6))
+plt.plot(year, pop, 'o', label='Given Data')
+plt.plot(years, analytical_pop, '-', label='Analytical Solution')
+plt.plot(years, euler_pop, '--', label='Euler Integration')
+plt.xlabel('Year')
+plt.ylabel('World Population')
+plt.legend()
+plt.title('World Population Growth Prediction')
+plt.grid(True)
+plt.show()
+```
+
+B: By decreasing the time steps further, the euler integration solution will become more accurate. However it may still not converge to the actual world population data. Whether or not the solution will converge to the actual data depends on how well the population growth model represents the data. 
+
++++
+
 __d.__ What happens to the numerical model as the number of timesteps increases? Does it look more like the analytical curve, $e^k(t-1900)$, or the measured population data, `pop`?
+
++++
+
+As the number of timesteps increases, the numerical model will look more like the analytical curve than the measured population data. This is because model becomes more accurate relative to the the analytical solution, but not necessarily the actual data.
 
 +++
 
@@ -230,19 +397,64 @@ __d.__ What happens to the numerical model as the number of timesteps increases?
 
 ```{code-cell} ipython3
 from math import factorial
-def exptaylor(x,n):
+import timeit
+
+# Taylor series approximation function
+def exptaylor(x, n):
     '''Taylor series expansion about x=0 for the function e^x
     the full expansion follows the function
-    e^x = 1+ x + x**2/2! + x**3/3! + x**4/4! + x**5/5! +...'''
-    if n<1:
-        print('lowest order expansion is 0 where e^x = 1')
+    e^x = 1 + x + x**2/2! + x**3/3! + x**4/4! + x**5/5! + ...'''
+    if n < 1:
+        print('lowest order expansion is 0 (with result e^x = 1)')
         return 1
     else:
-        ex = 1+x # define the first-order taylor series result
-        for i in range(1,n):
-            ex+=x**(i+1)/factorial(i+1) # add the nth-order result for each step in loop
+        ex = 1 + x  # define the first-order Taylor result
+        for i in range(2, n+1):
+            ex += (x**i) / factorial(i)  # add the nth-order result for each step in loop
         return ex
-        
+
+# Part A:
+#---------------------
+approx_e1_2nd_order = exptaylor(1, 2)
+true_e1 = np.exp(1)
+relative_error_2nd_order = abs(approx_e1_2nd_order - true_e1) / true_e1
+
+print(f"Second-order Taylor series approximation of e^1: {approx_e1_2nd_order}")
+print(f"True value of e^1: {true_e1}")
+print(f"Relative error: {relative_error_2nd_order}")
+
+# Part B:
+#-------------------------
+def time_exptaylor(order):
+    def wrapper():
+        exptaylor(1, order)
+    return wrapper
+
+time_2nd_order = timeit.timeit(time_exptaylor(2), number=10000)
+print(f"Time for second-order Taylor series (10000 runs): {time_2nd_order:.6f} seconds")
+
+time_10th_order = timeit.timeit(time_exptaylor(10), number=10000)
+print(f"Time for tenth-order Taylor series (10000 runs): {time_10th_order:.6f} seconds")
+
+# Part C:
+#---------------------
+orders = range(1, 21)
+relative_errors = []
+
+for n in orders:
+    approx_e1 = exptaylor(1, n)
+    relative_error = abs(approx_e1 - true_e1) / true_e1
+    relative_errors.append(relative_error)
+
+plt.figure(figsize=(10, 6))
+plt.plot(orders, relative_errors, 'o-', label='Relative Error')
+plt.yscale('log')
+plt.xlabel('Taylor Series Expansion Order')
+plt.ylabel('Relative Error')
+plt.title('Relative Error of Taylor Series Approximation of e^1')
+plt.legend()
+plt.grid(True)
+plt.show()
 ```
 
 ```{code-cell} ipython3
