adding Coopers notes

--- a/module_01/HW_01.md
+++ b/module_01/HW_01.md
@@ -5,7 +5,7 @@ jupytext:
     extension: .md
     format_name: myst
     format_version: 0.13
-    jupytext_version: 1.11.4
+    jupytext_version: 1.10.3
 kernelspec:
   display_name: Python 3 (ipykernel)
   language: python
@@ -64,7 +64,6 @@ str1==str2
 #str1>str2
 ```
 
-````{code-cell} ipython3
 3. The following code has an error, fix the error so that the correct result is returned:
 
 ```y is 20 and x is less than y```
@@ -78,7 +77,6 @@ if x<y and y==20:
 else:
     print('x is not less than y')
 ```
-````
 
 ```{code-cell} ipython3
 x=1
@@ -214,7 +212,6 @@ std_A_99 = np.std(A_99)
 
 print(f"Mean of A_99: {mean_A_99}")
 print(f"Standard Deviation of A_99: {std_A_99}")
-
 ```
 
 ```{code-cell} ipython3
@@ -232,6 +229,10 @@ std_A_99 = np.std(A_99)
 '''
 ```
 
+**Cooper**: Yes, the `timeit` only works on one block of code at time in one cell. The timers are really only for small code comparisons. 
+
++++
+
 3. Use the two arrays, X and Y, given below to create A_99 using numpy array math rather than a for-loop.
 
 ```{code-cell} ipython3
@@ -246,11 +247,15 @@ d. create a filled contour plot of X, Y, A_99 [contourf plot documentation](http
 
 ```{code-cell} ipython3
 %%timeit
-X, Y = np.meshgrid(np.arange(10), np.arange(10))
+# X, Y = np.meshgrid(np.arange(10), np.arange(10))
 A_99 = X * Y
 mean_A_99 = np.mean(A_99)
 std_A_99 = np.std(A_99)
+```
 
+**Cooper:** just use small blocks for timers also remove the meshgrid command
+
+```{code-cell} ipython3
 print(f"Mean of A_99: {mean_A_99}")
 print(f"Standard Deviation of A_99: {std_A_99}")
 
@@ -263,8 +268,7 @@ plt.ylabel('Y')
 plt.show()
 ```
 
-````{code-cell} ipython3
-# 4. The following linear interpolation function has an error. It is supposed to return y(x) given the the two points $p_1=[x_1,~y_1]$ and $p_2=[x_2,~y_2]$. Currently, it just returns and error.
+4. The following linear interpolation function has an error. It is supposed to return y(x) given the the two points $p_1=[x_1,~y_1]$ and $p_2=[x_2,~y_2]$. Currently, it just returns and error.
 
 ```python
 def linInterp(x,p1,p2):
@@ -277,7 +281,6 @@ def linInterp(x,p1,p2):
     
     return p1[2]+slope*(x - p1[1])
 ```
-````
 
 ```{code-cell} ipython3
 def linInterp(x,p1,p2):
@@ -290,6 +293,10 @@ def linInterp(x,p1,p2):
     
     return p1[1]+slope*(x - p1[0])
 ```
+
+**Cooper**: add a test case where you show it works
+
++++
 
 ## Problems [Part 3](./03_Numerical_error.md)
 
@@ -371,7 +378,7 @@ plt.grid(True)
 plt.show()
 ```
 
-B: By decreasing the time steps further, the euler integration solution will become more accurate. However it may still not converge to the actual world population data. Whether or not the solution will converge to the actual data depends on how well the population growth model represents the data. 
+B: By decreasing the time steps further, the euler integration solution will become more accurate. However it may still not converge to the actual world population data. Whether or not the solution will converge to the actual data depends on how well the population growth model represents the data.
 
 +++
 
@@ -456,6 +463,12 @@ plt.legend()
 plt.grid(True)
 plt.show()
 ```
+
+```{code-cell} ipython3
+
+```
+
+**Cooper:** nice work, here you can use your first two times to extrapolate to higher orders. Nice semilog plot
 
 ```{code-cell} ipython3
 
